dokuwiki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dokuwiki
  name: dokuwiki
  namespace: dokuwiki
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: dokuwiki
