dokuwiki/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: dokuwiki
  name: dokuwiki
  namespace: dokuwiki
spec:
  host: dokuwiki-ingress.apps.cluster-f8f8.f8f8.sandbox1405.opentlc.com
  port:
    targetPort: 8081
  to:
    kind: Service
    name: dokuwiki
    weight: 100
  wildcardPolicy: None
